fix text wrapping

--- a/css/build.css
+++ b/css/build.css
@@ -10,6 +10,7 @@
 	text-align: center;
 	cursor: pointer;
 	border-radius: 6px;
+	white-space: initial;
 }
 
 .btn-primary:focus,
